--- a/cloverbazar/views/carts/productCart.ejs
+++ b/cloverbazar/views/carts/productCart.ejs
@@ -14,7 +14,7 @@
             <p>$ <%=(carrito_producto[i].productos.precio)*(1-(carrito_producto[i].productos.descuento)/100)%></p>
             <input type="hidden" name="id" value="<%=carrito_producto[i].id%>">
             <input type="hidden" name="precio" value="<%=(carrito_producto[i].productos.precio)*(1-(carrito_producto[i].productos.descuento)/100)%>">
-            <a href="/carts/eliminar/<%=carrito_producto[0].carrito_id%>/<%=carrito_producto[i].producto_id%>" style="position: relative; bottom: 55px; text-decoration: none;">X</a>
+            <a href="/carts/eliminar/<%=carrito_producto[0].carrito_id%>/<%=carrito_producto[i].id%>" style="position: relative; bottom: 55px; text-decoration: none;">X</a>
         </article>
             <% total = total + (carrito_producto[i].productos.precio)*(1-(carrito_producto[i].productos.descuento)/100)*carrito_producto[i].cantidad%>
             <% } %>
