--- a/cloverbazar/public/stylesheets/header.css
+++ b/cloverbazar/public/stylesheets/header.css
@@ -24,10 +24,11 @@ header div.barra1 div{
 header div.barra2{
     background-color: #faeded;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    /*cambio 5*/
+    padding: 20px; 
 } 
 header div.barra2 div.logo {
     width: 20%;
@@ -57,36 +58,52 @@ display: none;
 header i{
     color: rgb(46, 46, 46);
 }
+/*cambio 1 -aca arranco los cambios del header 2-12-2020*/
+header i.fa-bars{
+font-size: 30px;
+}
+
 
 header div.loginButton button{
     border: 0;
     background-color:  rgb(46, 46, 46);
     color: white;
     border-radius: 5px;
-    padding: 5px;
+    /*cambio 6*/
+    padding: 15px;
+
 }
 
-form.search-form {
+header form.search-form {
     display: flex;
-    flex-wrap: wrap;
+    /*cambio 3 flex-wrap: wrap;*/
     justify-content: center;
 }
 
-form.search-form input.search-form-input {
-    width: 40px;
+header form.search-form input.search-form-input {
+    
+    /* cambio 2*/
+    /*width: 40px;
+    height: 20px;*/
+    width: 80px;
+    height: 30px;
+
     border: 0;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    height: 20px;
+   
 }
 
-form.search-form button.search-form-button {
+header form.search-form button.search-form-button {
     background-color: white;
     border: 0;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-    height: 20px;
+    /*cambio 4height: 20px;*/
+    height: 30px;
+    
 }
+
 
 header div.menu nav.menu-hamburguesa ul {
     display: none;
@@ -113,7 +130,9 @@ header div.menu:hover nav.menu-hamburguesa ul {
     right: 10px;
     top: 100px;
 }
-
+header i.fa-shopping-cart{
+    font-size: 25px;
+}
 /*FOOTER*/
 
 footer {
@@ -216,11 +235,11 @@ footer nav ul li {
         width: 100px;
     }
 
-    form.search-form {
+    header form.search-form {
         width: 100px;
     }
 
-    form.search-form input.search-form-input {
+    header form.search-form input.search-form-input {
         width: 70px;
     }
 
@@ -253,7 +272,7 @@ footer nav ul li {
 }
 
 @media(min-width:1024px) {
-    form.search-form {
+    header form.search-form {
         width: 150px;
     }
 
@@ -261,8 +280,11 @@ footer nav ul li {
         width: 150px;
     }
 
-    form.search-form input.search-form-input {
-        width: 115px;
+    header form.search-form input.search-form-input {
+       /*cambio 5 width: 115px;*/
+       width: 170px; 
+       padding: 15px;
+      
     }
 
 }
