--- a/cloverbazar/views/error.ejs
+++ b/cloverbazar/views/error.ejs
@@ -1,5 +1,12 @@
 <%-include('./partials/header', {title: 'error'})%>
-
+<link rel="stylesheet" href="/stylesheets/product.css">
+<main>
 <h1>Oops! No pudimos encontrar la página</h1>
-
+</main>
 <%-include('./partials/footer')%>
+<style>    main{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 200px;
+}</style>
