--- a/cloverbazar/views/users/login.ejs
+++ b/cloverbazar/views/users/login.ejs
@@ -14,7 +14,7 @@
         <input type="email" name="email" placeholder="E-mail">
         <input type="password" name="password" placeholder="Contraseña">
         <label for="remember">Recordame</label>
-        <input type="checkbox" name="remember" id="remember">
+        <input type="checkbox" name="remember" class="remember" id="remember">
         <a href="/users/register">No tenes cuenta? Registrate</a>
         <button type="submit">Iniciar sesión</button>
     </form>
