--- a/cloverbazar/public/stylesheets/forms.css
+++ b/cloverbazar/public/stylesheets/forms.css
@@ -68,6 +68,13 @@ form.forms input {
     width: 80%;
     border-radius: 5px;
 }
+form.forms input.remember {
+    margin: 20px 20px 10px 20px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    width: 20px;
+}
 
 form.forms input:first-child{
     margin-top: 30px;
