--- a/cloverbazar/views/products/ofertas.ejs
+++ b/cloverbazar/views/products/ofertas.ejs
@@ -14,8 +14,18 @@
                 <img src="/images/products/<%=productos[i].imagenes[0].ruta%>" alt="">
                 <% } %>
                 <h3><%=productos[i].nombre%> </h3>
-                <h3> $<%=productos[i].precio%> </h3>
-            </a>
+                <div class="precios">
+                    <%if( productos[i].descuento > 0) {%>
+                    <h3 class= "tachado"> $<%=productos[i].precio%> </h3>
+                    <h3 class="precioConDto">$<%=(productos[i].precio * (100-productos[i].descuento))/100%></h3>
+                    <% } else{ %>
+                        <h3> $<%=productos[i].precio%> </h3>
+                    </div>
+                    <% } %>
+                    <%if( productos[i].stock <= 0) {%>
+    
+                    <h3>Agotado</h3>
+                    <% } %>            </a>
         </article>
         <% } } %>
     </section>
