--- a/cloverbazar/views/products/combos.ejs
+++ b/cloverbazar/views/products/combos.ejs
@@ -4,18 +4,28 @@
 <main>
     <h2>Combos</h2>
     <section>
-        <% if (productsCombos.length == 0){ %>
+        <% if (productos.length == 0){ %>
             <h3>No hay combos nuevos disponibles</h3>
             <% } else {  %>
-        <%for(let i = 0 ; i < productsCombos.length ; i++) { %>
+        <%for(let i = 0 ; i < productos.length ; i++) { %>
         <article>
-            <a href="/products/detail/<%=productsCombos[i].id%>">
-                <%if( productsCombos[i].imagenes.length > 0) {%>
-                <img src="/images/products/<%=productsCombos[i].imagenes[0].ruta%>" alt="">
+            <a href="/products/detail/<%=productos[i].id%>">
+                <%if( productos[i].imagenes.length > 0) {%>
+                <img src="/images/products/<%=productos[i].imagenes[0].ruta%>" alt="">
                 <% } %>
-                <h3><%=productsCombos[i].nombre%> </h3>
-                <h3> $<%=productsCombos[i].precio%> </h3>
-            </a>
+                <h3><%=productos[i].nombre%> </h3>
+                <div class="precios">
+                    <%if( productos[i].descuento > 0) {%>
+                    <h3 class= "tachado"> $<%=productos[i].precio%> </h3>
+                    <h3 class="precioConDto">$<%=(productos[i].precio * (100-productos[i].descuento))/100%></h3>
+                    <% } else{ %>
+                        <h3> $<%=productos[i].precio%> </h3>
+                    </div>
+                    <% } %>
+                    <%if( productos[i].stock <= 0) {%>
+    
+                    <h3>Agotado</h3>
+                    <% } %>            </a>
         </article>
        
         <% } } %>
