--- a/cloverbazar/views/partials/header.ejs
+++ b/cloverbazar/views/partials/header.ejs
@@ -30,7 +30,12 @@
             <%if(!locals.isAuthenticated){%>
             <a href="/users/login">
                 <div class="loginButton">
-                    <button>Log In</button>
+                    <button>Iniciar sesión</button>
+                </div>
+            </a>
+            <a href="/users/register">
+                <div class="loginButton">
+                    <button>Registrarse</button>
                 </div>
             </a>
             <%} else {%>
