--- a/cloverbazar/views/users/perfil.ejs
+++ b/cloverbazar/views/users/perfil.ejs
@@ -23,7 +23,7 @@
             <input type="text" name="telefono" placeholder="Teléfono" value="<%=usuario.telefono%>">
             <button type="submit">Guardar cambios</button>
         </form>
-        <a href="/users/password/<%=usuario.id%>"> <h3>Cambiar contraseña</h3> </a>
+        <a class="cambioContra" href="/users/password/<%=usuario.id%>"> <h3>Cambiar contraseña</h3> </a>
 </div> 
 </main>
 <%-include('../partials/footer')%>
