--- a/cloverbazar/public/stylesheets/faqs.css
+++ b/cloverbazar/public/stylesheets/faqs.css
@@ -8,6 +8,41 @@ main {
     align-items: center;
 }
 
+.accordion{
+    background-color: #fbdcc4;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 10px;
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.12);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.12);
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.12);
+}
+
+.accordion-link{
+    display: block;
+    text-decoration: none;
+    color: rgb(46, 46, 46);
+    font-size: 1.5rem;
+    padding: 5px;
+}
+
+.accordion-answer{
+    max-height: 0;
+    overflow: hidden;
+    position: relative;
+}
+
+.accordion-answer p{
+    color: rgb(102, 101, 101);
+    transition: 350ms;
+}
+
+.accordion:target .answer{
+    max-height: 30rem;
+}
+
+
+
 main section article {
     max-width: 220px;
 }
