--- a/cloverbazar/views/faqs.ejs
+++ b/cloverbazar/views/faqs.ejs
@@ -1,53 +1,66 @@
 <link rel="stylesheet" href="/stylesheets/faqs.css">
 
 <%-include('./partials/header', {title: 'Preguntas frecuentes'})%>
+<style>
+    
+</style>
 <main>
     <h1>PREGUNTAS FRECUENTES</h1>
-    <section>
-        <article>
-            <h3>¿Dónde están ubicados?</h3>
-            <p>Estamos en Villa Crespo, CABA.</p>
+    <section class="faqs-container">
+        <article class="accordion" id="question1">
+                <a class="accordion-link" href="#question1">¿Dónde están ubicados?</a>
+            <div class="accordion-answer">
+                <p>Estamos en Villa Crespo, CABA.</p>
+            </div>
         </article>
-        <article>
-            <h3>¿Venden por mayor?</h3>
-            <p>Si, vendemos por mayor, tenemos a disposición nuestro catálogo para que puedas ver los precios. Depende
-                la cantidad de cada producto estos pueden variar.</p>
+        <article class="accordion" id="question2">
+                <a class="accordion-link" href="#question2">¿Venden por mayor?</a>
+            <div class="accordion-answer">
+                <p>Si, vendemos por mayor, tenemos a disposición nuestro catálogo para que puedas ver los precios. Depende
+                    la cantidad de cada producto estos pueden variar.</p>
+            </div>
         </article>
-        <article>
-            <h3>¿Venden por menor?</h3>
-            <p>Si, vendemos por menor, nuestros productos están en la página de Facebook y de Instagram, donde también
-                vas a poder ver los precios.</p>
+        <article class="accordion" id="question3">
+                <a class="accordion-link" href="#question3">¿Venden por menor?</a>
+            <div class="accordion-answer">
+                <p>Si, vendemos por menor, nuestros productos están en la página de Facebook y de Instagram, donde también
+                    vas a poder ver los precios.</p>
+            </div>
         </article>
-        <article>
-            <h3>¿Hay un monto mínimo de compra?</h3>
-            <p>No tenemos monto mínimo. Se puede comprar por la cantidad que desees.</p>
+        <article class="accordion" id="question4">
+                <a class="accordion-link" href="#question4">¿Hay un monto mínimo de compra?</a>
+            <div class="accordion-answer">
+                <p>No tenemos monto mínimo. Se puede comprar por la cantidad que desees.</p>
+            </div>
         </article>
-        <article>
-            <h3>¿Siempre tienen stock?</h3>
-            <p>Siempre  se debe consultar el stock antes de realizar un pedido. Puede pasar que no tengamos ese producto
-                o que no tengamos el color deseado. En caso de no tener lo que buscas, nos agendamos tu contacto para
-                avisarte cuando nos entre.</p>
+        <article class="accordion" id="question5">
+                <a class="accordion-link" href="#question5">¿Siempre tienen stock?</a>
+            <div class="accordion-answer">
+                <p>Siempre  se debe consultar el stock antes de realizar un pedido. Puede pasar que no tengamos ese producto
+                    o que no tengamos el color deseado. En caso de no tener lo que buscas, nos agendamos tu contacto para
+                    avisarte cuando nos entre.</p>
+            </div>
         </article>
-        <article>
-            <h3>¿Realizan envíos? ¿Cómo?</h3>
-            <ul>
-                <li>Envíos en CABA: sin cargo con un monto mínimo de compra dependiendo de la zona.</li>
-                <li>Envíos en GBA: Con moto o por Correo Argentino a cargo del cliente.</li>
-                <li>Envíos al interior: Por Correo Argentino a cargo del cliente.
-                    <p class="aclaracion">
-                        Los envíos por correo son con previa acreditación del monto del pedido y del envío.
-                        Despachamos en el día o al día siguiente siempre y cuando tengamos stock de lo pedido.
-                    </p>
-                </li>
-            </ul>
+        <article class="accordion" id="question6">
+                <a class="accordion-link" href="#question6">¿Realizan envíos? ¿Cómo?</a>
+            <div class="accordion-answer">
+                <ul>
+                    <li>Envíos en CABA: sin cargo con un monto mínimo de compra dependiendo de la zona.</li>
+                    <li>Envíos en GBA: Con moto o por Correo Argentino a cargo del cliente.</li>
+                    <li>Envíos al interior: Por Correo Argentino a cargo del cliente.
+                        <p class="aclaracion">
+                            Los envíos por correo son con previa acreditación del monto del pedido y del envío.
+                            Despachamos en el día o al día siguiente siempre y cuando tengamos stock de lo pedido.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </article>
-        <article>
-            <h3>¿Cuáles son los métodos de pago?</h3>
-            <ul>
-                <li>Efectivo</li>
-                <li>Transferencia o depósito bancario</li>
-                <li>Mercado Pago</li>
-            </ul>
+        <article class="accordion" id="question7">
+                <a class="accordion-link" href="#question7">¿Cuáles son los métodos de pago?</a>
+            <div class="accordion-answer">
+                <p>Se puede pagar en efectivo, transferencia o depósito bancario y Mercado Pago</p>
+            </div>
         </article>
     </section>
 </main>
