--- a/cloverbazar/views/users/register.ejs
+++ b/cloverbazar/views/users/register.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/stylesheets/forms.css">
-<script src="/public/js/validaciones.js"></script>
+<script src="/js/validacionesRegistro.js"></script>
 
 <%-include('../partials/header', {title: 'Registrate'})%>
 <main>
@@ -13,30 +13,22 @@
     <%}%>
         <% if(typeof errorAlLoguear != "undefined"){ %>
         <p style="color:red"><%= errorAlLoguear %></p>
-<<<<<<< HEAD
     <% } %>
     <form action="/users/register" method="POST" class="forms">
-        <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
-        <input type="text" name="apellido" id="apellido" placeholder="Apellido" required>
-        <input type="email" name="email" id="email" placeholder="E-mail" required>
-        <input type="password" name="password" id="password" placeholder="Contraseña" required>
-        <input type="password" name="confirmPassword" placeholder="Confirmar contraseña" required>
+        <input type="text" name="nombre" id="nombre" placeholder="Nombre">
+        <div class="nombreError"></div>
+        <input type="text" name="apellido" id="apellido" placeholder="Apellido">
+        <div class="apellidoError"></div>
+        <input type="email" name="email" id="email" placeholder="E-mail">
+        <div class="emailError"></div>
+        <input type="password" name="password" id="password" placeholder="Contraseña">
+        <div class="passwordError"></div>
+        <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirmar contraseña">
+        <div class="confirmPasswordError"></div>
         <input type="text" name="direccion" id="direccion" placeholder="Direccion">
         <input type="text" name="telefono" id="telefono" placeholder="Telefono">
+        <div class="telefonoError"></div>
         <button type="submit">Registrate</button>
     </form>
-=======
-        <% } %>
-        <form action="/users/register" method="POST" class="forms">
-            <input type="text" name="nombre" placeholder="Nombre">
-            <input type="text" name="apellido" placeholder="Apellido">
-            <input type="email" name="email" placeholder="E-mail">
-            <input type="password" name="password" placeholder="Contraseña">
-            <input type="password" name="confirmPassword" placeholder="Confirmar contraseña">
-            <input type="text" name="direccion" placeholder="Direccion">
-            <input type="text" name="telefono" placeholder="Telefono">
-            <button type="submit">Registrate</button>
-        </form>
->>>>>>> 004ef66246635b93cf1b9b54b4c420df859e66f4
 </main>
 <%-include('../partials/footer')%>
