--- a/cloverbazar/public/stylesheets/index.css
+++ b/cloverbazar/public/stylesheets/index.css
@@ -11,9 +11,8 @@ main section.carrusel{
     flex-direction: column;
 }
 main section.carrusel img{
-justify-content: stretch;
+object-fit: fill;
 width: 100%;
-height: 100px;
 /*le pongo altura para que no quede feo*/
 }
 main section.carrusel h1{ 
